kismet (2011.03.R2-1~experimental2) experimental; urgency=low

  * Make libcap dependencies relevant only for linux systems
  * Include po-deconf translations
    - Swedish    (Closes: #697292)
  * Copyright file
    - Updated license for tcpdump-extract.h file

 -- Nick Andrik <nick.andrik@gmail.com>  Wed, 20 Feb 2013 01:32:00 +0100

kismet (2011.03.R2-1~experimental1) experimental; urgency=low

  * New upstream release (Closes: #534884, #558773, #572593, LP: #407972)

  * New maintainer (Closes: #662105)
  * Updated build dependencies in control file
  * The source package is split in two packages
    - Details documented in README.Debian (Closes: #416106)
    - Updated descriptions in control (Closes: #455213, LP: #70015)
  * Kismet no longer uses /var/{log,lib} folders. Removed mentions in postrm,
    kismet.dirs
  * Kismet allows for suid/priv dropping configured via debconf
    - Available debconf options are specified in the templates file
    - postinst creates the kismet user group if necessary and postrm removes
      it on package purge
  * Patches
    - Removed gcc-4.3 and wsp100_support patches since they are included
      upstream.
    - 50_fix_gpsmap_bashism: Fixes a bashism in multi-gpsmap example
      (Closes: #530111)
    - 60_support_for_libnl3: Add support to build using libnl-3
    - 70_fix_makefile: Fixes Makefile.inc.in to allow for passing compiler
      options to plugins build environment, useful for hardening
    - 80_fix_manpage: Fixes some minor issues in kismet manpage
  * kismet.1 manpage
    - Fixed spelling typos (Closes: #683709)
    - Removed blank lines that make mdoc complain (Closes: #551994)
    - Corrected date syntax (Closes: #551997)
    - Added links for kismet_client and kismet_server manpages pointing to the
      main manpage
  * Removed unnecessary link /etc/others-menu/0000_kismet.desktop
    (Closes: #563264)
  * Converted package to CDBS
    - Simplificaton of rules file
    - Added 3.0 (quilt) in source/format