@@ -8,7 +8,7 @@ Index: kismet-2011-03-R2/Makefile.inc.in
  CXXLIBS		= @CXXLIBS@
  KSLIBS		= @KSLIBS@
 -CFLAGS		= @CPPFLAGS@
-+CFLAGS		= @CFLAGS@
++CFLAGS		= @CPPFLAGS@ @CFLAGS@
  CLIENTLIBS 	= @CLIENTCLIBS@
  CAPLIBS		= @caplibs@
  CLIENTFLAGS = @CLIENTCFLAGS@
